# document-text-extractor

./: .dockerignore  .gitignore  Dockerfile  LICENSE  Makefile  README.md  app.py  extract  pyproject.toml  requirements.txt  setup.sh  wget-log
docs/: API.md  ARCHITECTURE.md  DEPLOYMENT.md  PERFORMANCE.md  README.md
tests/: conftest.py  test_cli.py  test_core.py  test_doc_types.py  test_registry.py
tests/strategies/: test_docx.py  test_ocr.py  test_pdf.py  test_text.py
text_extractor/: __init__.py  __main__.py  core.py  exceptions.py  registry.py
text_extractor/strategies/: __init__.py  base.py  docx.py  ocr.py  pdf.py  text.py
